@startuml

title __MAIN's Class Diagram__\n

  namespace main {
    class main.Game {
        {static} + GAME_SCREEN : byte
        {static} + MENU_SCREEN : byte
        {static} + PAUSE_SCREEN : byte
        {static} + RULES_SCREEN : byte
        {static} + WIN_SCREEN : byte
        + fullH : int
        + fullW : int
        + h : int
        {static} + scaleFullX : float
        {static} + scaleFullY : float
        {static} + scaleX : float
        {static} + scaleY : float
        + w : int
        - canvas : Canvas
        - finished : boolean
        - graphicsContext : GraphicsContext
        - keyboardBitSet : BitSet
        - scene : Scene
        - screen : byte
        - stage : Stage
        - winner : boolean
        + getCanvas()
        + getGraphicsContext()
        + getMap()
        + getPlayer1()
        + getPlayer2()
        + getScreen()
        + getStage()
        + getWinner()
        + initialize()
        + isFinished()
        + isPressed()
        + reset()
        + setFinished()
        + setKey()
        + setScreen()
        + setStage()
        + setWinner()
        + start()
        - setFxThings()
    }
  }
  

  namespace main {
    class main.Images {
        {static} - AK_LEFT_IMAGE_PATH : String
        {static} - AK_RIGHT_IMAGE_PATH : String
        {static} - BULLET_PATHS : ArrayList<String>
        {static} - FAMAS_LEFT_IMAGE_PATH : String
        {static} - FAMAS_RIGHT_IMAGE_PATH : String
        {static} - GLOCK_LEFT_IMAGE_PATH : String
        {static} - GLOCK_RIGHT_IMAGE_PATH : String
        {static} - GUN_PATHS : ArrayList<String>
        {static} - HAND1_IMAGE_PATH : String
        {static} - HAND2_IMAGE_PATH : String
        {static} - HEAVY_BULLET_LEFT_IMAGE_PATH : String
        {static} - HEAVY_BULLET_RIGHT_IMAGE_PATH : String
        {static} - LIGHT_BULLET_LEFT_IMAGE_PATH : String
        {static} - LIGHT_BULLET_RIGHT_IMAGE_PATH : String
        {static} - MP5_LEFT_IMAGE_PATH : String
        {static} - MP5_RIGHT_IMAGE_PATH : String
        {static} - P1_LEFT_IMAGE_PATH : String
        {static} - P1_RIGHT_IMAGE_PATH : String
        {static} - P2_LEFT_IMAGE_PATH : String
        {static} - P2_RIGHT_IMAGE_PATH : String
        {static} - PLAYER_PATHS : ArrayList<String>
        {static} - REVOLVER_LEFT_IMAGE_PATH : String
        {static} - REVOLVER_RIGHT_IMAGE_PATH : String
        {static} - SAIGA_LEFT_IMAGE_PATH : String
        {static} - SAIGA_RIGHT_IMAGE_PATH : String
        {static} - SHOTGUN_BULLET_LEFT_IMAGE_PATH : String
        {static} - SHOTGUN_BULLET_RIGHT_IMAGE_PATH : String
        {static} - SHOTGUN_LEFT_IMAGE_PATH : String
        {static} - SHOTGUN_RIGHT_IMAGE_PATH : String
        {static} - SNIPER_LEFT_IMAGE_PATH : String
        {static} - SNIPER_RIGHT_IMAGE_PATH : String
        {static} - STANDARD_BULLET_LEFT_IMAGE_PATH : String
        {static} - STANDARD_BULLET_RIGHT_IMAGE_PATH : String
        {static} - UZI_LEFT_IMAGE_PATH : String
        {static} - UZI_RIGHT_IMAGE_PATH : String
        {static} - background : Image
        {static} - block : Image
        {static} - bulletImages : ArrayList<Image>
        {static} - gunImages : ArrayList<Image>
        {static} - hand1 : Image
        {static} - hand2 : Image
        {static} - mainMenuImage : Image
        {static} - playerImages : ArrayList<Image>
        {static} + clearAll()
        {static} + generateScaledImages()
        {static} + getBackgroundImage()
        {static} + getBlockImage()
        {static} + getBulletImages()
        {static} + getGunImages()
        {static} + getHandImage()
        {static} + getImageFromList()
        {static} + getMainMenuImage()
        {static} + getPlayerImages()
        {static} + setBackgroundImage()
        {static} + setBlockImage()
        {static} - fillArrayListWithScaledImages()
        {static} - getScaledImage()
    }
  }
  

  namespace main {
    class main.KeyPressedHandler {
        + handle()
        + setGame()
        - maximize()
        - minimize()
    }
  }
  

  namespace main {
    class main.KeyReleasedHandler {
        + handle()
        + setGame()
    }
  }
  

  namespace main {
    class main.Main {
        {static} - game : Game
        {static} + getGame()
        {static} + main()
        {static} + setGame()
    }
  }
  

  namespace main {
    class main.Map {
        - blocks : ArrayList<MapObject>
        + Map()
        + getBlocks()
    }
  }
  

  namespace main {
    class main.ObjectData {
        + h : byte
        + image : Image
        + w : byte
        + x : float
        + y : float
        + ObjectData()
        + equals()
    }
  }
  

  namespace main {
    class main.Render {
        {static} - GAME : Game
        {static} - drawnWinScreen : boolean
        {static} - graphicsContext : GraphicsContext
        {static} - p1Color : Color
        {static} - p2Color : Color
        {static} - pauseScreenTextX : float
        {static} - pauseScreenTextY : float
        {static} - transparentBlack : Color
        {static} - winScreenTextX : float
        {static} - winScreenTextY : float
        {static} + drawGame()
        {static} + drawMainMenu()
        {static} + drawPaused()
        {static} + drawRulesScreen()
        {static} + drawWinScreen()
        {static} + setDrawnWinScreen()
        {static} + setGame()
        {static} + setGraphicsContext()
    }
  }
  

  main.Game -up-|> javafx.application.Application
  main.Game o-- main.Map : map
  main.Game o-- objects.Player : player1
  main.Game o-- objects.Player : player2
  main.KeyPressedHandler .up.|> javafx.event.EventHandler
  main.KeyPressedHandler o-- main.Game : GAME
  main.KeyReleasedHandler .up.|> javafx.event.EventHandler
  main.KeyReleasedHandler o-- main.Game : GAME


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
